--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,77 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import requests
+import schedule
+import time
+from twilio.rest import Client  # You need to import the Twilio Client
 
-# C extensions
-*.so
+# Define the Celsius to Fahrenheit conversion function
+def celsius_to_fahrenheit(celsius):
+    return (celsius * 9/5) + 32  # Fixed the formula and the missing parentheses
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Define the function to send a text message
+def send_text_message(body):
+    account_sid = "twilio_sid"
+    auth_token = "twilio_token"
+    from_phone_number = "from_phone_number"
+    to_phone_number = "to_phone_number"
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+    # Initialize the Twilio client
+    client = Client(account_sid, auth_token)
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+    message = client.messages.create(
+        body=body,
+        from_=from_phone_number,
+        to=to_phone_number
+    )
+    print("Text message sent!")
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+# Define the function to get weather data
+def get_weather(latitude, longitude, api_key):
+    base_url = "https://api.openweathermap.org/data/2.5/weather"
+    params = {
+        "lat": latitude,
+        "lon": longitude,
+        "appid": api_key
+    }
+    response = requests.get(base_url, params=params)
+    data = response.json()
+    return data
 
-# Translations
-*.mo
-*.pot
+# Define the function to send a weather update
+def send_weather_update():
+    latitude = 40.4814
+    longitude = 74.041
+    api_key = "your_api_key"  # Replace with your actual OpenWeatherMap API key
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+    weather_data = get_weather(latitude, longitude, api_key)
+    temperature_kelvin = weather_data["main"]["temp"]
+    temperature_celsius = temperature_kelvin - 273.15  # Convert from Kelvin to Celsius
+    relative_humidity = weather_data["main"]["humidity"]
+    wind_speed = weather_data.get("wind", {}).get("speed", 0)
 
-# Flask stuff:
-instance/
-.webassets-cache
+    temperature_fahrenheit = celsius_to_fahrenheit(temperature_celsius)
 
-# Scrapy stuff:
-.scrapy
+    weather_info = (
+        f"Good morning!\n"
+        f"Current Weather in New Jersey:\n"
+        f"Temperature: {temperature_fahrenheit:.2f}F\n"
+        f"Relative Humidity: {relative_humidity}%\n"
+        f"Wind Speed: {wind_speed} m/s"
+    )
 
-# Sphinx documentation
-docs/_build/
+    send_text_message(weather_info)
 
-# PyBuilder
-.pybuilder/
-target/
+# Define the main function
+def main():
+    schedule.every().day.at("08:00").do(send_weather_update)
+    while True:
+        schedule.run_pending()
+        time.sleep(1)
 
-# Jupyter Notebook
-.ipynb_checkpoints
+if __name__ == "__main__":
+    main()
+3
+    schedule.every().
 
-# IPython
-profile_default/
-ipython_config.py
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
